[package]
authors = [
  "Barugon <barugon@dungeonbox.net>",
  "Elias Kartashov <elias@lowenware.com>",
]
description = "File dialog window for egui"
edition = "2021"
keywords = ["file-dialog", "file-picker"]
license = "MIT"
name = "egui_file"
repository = "https://github.com/Barugon/egui_file"
rust-version = "1.76.0"
version = "0.22.0"

[dependencies]
nih_plug = { git = "https://github.com/Ardura/nih-plug.git", rev = "29a31287468065191e32c8886e1d2c2200316e4f", features = ["assert_process_allocs"] }
nih_plug_egui = { git = "https://github.com/Ardura/nih-plug.git", rev = "29a31287468065191e32c8886e1d2c2200316e4f" }

#[dependencies.egui]
#version = "0.31"

[dependencies.dyn-clone]
version = "1.0.17"

#[dev-dependencies.eframe]
#version = "0.31"
