[package]
authors = [
  "Barugon <barugon@dungeonbox.net>",
  "Elias Kartashov <elias@lowenware.com>",
]
description = "File dialog window for egui"
edition = "2021"
keywords = ["file-dialog", "file-picker"]
license = "MIT"
name = "egui_file"
repository = "https://github.com/Barugon/egui_file"
rust-version = "1.76.0"
version = "0.22.0"

[dependencies]
nih_plug = { git = "https://github.com/Ardura/nih-plug.git", rev = "bc41a03b9ac6e41f43e1c9bc5e9d664e21486b60", features = ["assert_process_allocs"] }
nih_plug_egui = { git = "https://github.com/Ardura/nih-plug.git", rev = "bc41a03b9ac6e41f43e1c9bc5e9d664e21486b60" }

#[dependencies.egui]
#version = "0.31"

[dependencies.dyn-clone]
version = "1.0.17"

#[dev-dependencies.eframe]
#version = "0.31"
